fixed bug with topNav active background color not showing up

--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ h2.satiricalDescription {
 }
 #subjectNav {
   list-style: none;
-  background-color: gray;
+  background-color: whitesmoke;
   width: calc(100%-4px);
   height: 100%;
   padding: 0;
@@ -43,18 +43,17 @@ h2.satiricalDescription {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  border: 2px solid grey;
+  border: 2px solid darkgrey;
 }
 #subjectNav li {
-  background-color: whitesmoke;
   flex-shrink: none;
-  width: 25%;
+  width: calc(25% - 4px);
   height: 2em;
   text-align: center;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  outline: 2px solid grey;
+  border: 2px solid grey;
 }
 #subjectNav li:hover {
   background-color: lightgrey;
